# painterly

./: Cargo.toml  Trunk.toml  index.html
.github/workflows/: deploy.yaml
src/: controls.rs  main.rs  overlay.rs  webcam.rs
