[package]
name = "painterly"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "^0.3.77", features = [
  "MediaDevices", "HtmlVideoElement", "MediaStream", "MediaStreamConstraints", "Navigator", "Window"
]}
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

